Added footer with references to data sources

--- a/template/footer.html
+++ b/template/footer.html
@@ -1,4 +1,15 @@
 </div>
+<div class="sources">
+    <p>
+        Graphs are based on <a href="https://data.rivm.nl/covid-19" title="Open covid-19 data from RIVM">Open Data from
+            RIVM</a>, <a href="https://stichting-nice.nl/" title="Open covid-19 data from NICE">Open Data from
+            NICE</a> and <a href="https://github.com/CSSEGISandData/COVID-19">Data from CSSE at Johns Hopkins
+            University</a>.
+        </br>
+        Please note that the case data are not accurate for the last four to five days! These cases are to be updated
+        in the coming days as more test data becomes available.
+    </p>
+</div>
 </body>
 
 </html>
